ontol/ontol-compiler/test-cases/error/map/def_property_after_map.on
def foo ( rel* 'prop': text )
def bar ( rel* 'prop': text )

map(
    foo( 'prop': prop ), // ERROR missing property `here`// NOTE consider using `match {}`
    bar( 'prop': prop )
)

rel {foo} 'here': text
